# nmpde-projects

./: .gitignore  CMakeLists.txt  README.md  cmake-common.cmake  convergence.py  manufactured.py  scalability.py  time_conv_exploration_test.sh
data/scalability/amg/: 1.txt  5.txt
data/scalability/ilu/: 2.txt  4.txt  6.txt
data/scalability/sor/: 1.txt  3.txt  4.txt  6.txt
data/space/both/height/: 10.txt  100.txt  20.txt  5.txt  50.txt
data/space/both/velocity/: 10.txt  100.txt  20.txt  5.txt  50.txt
data/space/height/: 10.txt  100.txt  20.txt  200.txt  5.txt  50.txt
data/space/velocity/: 10.txt  20.txt  5.txt  50.txt
data/time/: 1.txt  5.txt
data/time/amg/: 2.txt  3.txt  4.txt  6.txt
data/time/both/: 100.txt
data/time/height/: 0.00025.txt  0.0005.txt  0.001.txt  0.00125.txt  0.0025.txt  0.005.txt  0.01.txt
data/time/ilu/: 3.txt
data/time/sor/: 2.txt  5.txt
mesh/: mesh-square-200.msh  mesh-square-4.msh  mesh-square-50.msh  mesh-square-h0.010000.msh  mesh_script.geo
scripts/: convergence.py
src/: Case_Examples.hpp  Case_Test.hpp  Functions.hpp  Problem_Case.hpp  Problem_Specs.hpp  Shallow_waters.cpp  Shallow_waters.hpp  Shallow_waters_impl.hpp  Test_Settings.hpp  Test_Switches.hpp  main.cpp
